2008-06-09 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/buildpkg: added "|| exit 1" to any command which should
	  cause the script to fail.

2008-06-09 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec: Changed individual SBINDIR/am... entries to
	  use a single SBINDIR/am* entry in %files

2008-06-09  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/fileheader.c: correctly free dle_str
	* device-src/device.c device-src/device.h: add volume_header Device
	  attributes
	* device-src/rait-device.c device-src/s3-device.c
	  device-src/tape-device.c device-src/vfs-device.c: populate
	  volume_header
	* server-src/amlabel.c: use volume_header to detect a non-empty tape
	  and require a force (-f) to overwrite it
	* server-src/taperscan.c: use volume_header to detect a non-empty tape
	  and require 'amlabel -f' to overwrite it
	* device-src/tape-device.c device-src/vfs-device.c: fix read_label
	  return values and remove useless chain-up calls

2008-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amservice.c: Open input file in read mode, prepend
				  get_original_cwd() to relative path.
	* installcheck/Makefile.am: Check amservice only on server.

2008-06-09  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Device.pl: skip all RAIT tests temporarily

2008-06-09  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda.8.xml: add links to amservice

2008-06-07  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/ipv6.m4: remove redundant AC_SOCKADDR_STORAGE
	* configure.in: don't call AC_SOCKADDR_STORAGE

2008-06-07  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Xfer.pl: make AMANDA_TMPDIR if it doesn't exist

2008-06-07  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Installcheck/Run.pm: fix Installcheck::Run vtape
	  handling so that checks can load/unload vtapes "manually"

2008-06-07  Dustin J. Mitchell <dustin@zmanda.com>